# Water_Engine

./: .gitignore  CmakeLists.txt  LICENSE  README.md
WaterEngine/: CmakeLists.txt
v2/: CMakeLists.txt  WaterEngine_Redesign_Plan.md
v2/Content/Assets/Icon/: RCa02952  icon.rc.in
v2/Content/Shaders/: Test.frag
v2/DemoGame/: CMakeLists.txt  Contents.pak
v2/DemoGame/Config/: GameConfig.ini  GameConfig.json
v2/DemoGame/Content/Config/: EngineConfig.json
v2/DemoGame/Content/Shaders/: Default.vert  TimeTest.frag
v2/DemoGame/Include/: DemoGameInstance.h  Game.h  GameConfig.h  GameStateTokens.h  GameStates.h  InputActions.h
v2/DemoGame/Include/Character/: Aoi.h  Kiyoshi.h  MovementComponent.h  NPC.h  PlayerCharacter.h
v2/DemoGame/Include/Config/: GameConfig.h
v2/DemoGame/Include/GameInstance/: DemoGameInstance.h
v2/DemoGame/Include/Input/: InputActions.h
v2/DemoGame/Include/Interaction/: Compass.h  ForestExit.h  IInteractable.h  IInteractor.h  InteractableComponent.h  QuestComponent.h
v2/DemoGame/Include/Interface/: IInteractive.h
v2/DemoGame/Include/Level/: LevelObject.h
v2/DemoGame/Include/Levels/: Credits.h  LevelOne.h  LevelOneBarriers.h  MainMenu.h
v2/DemoGame/Include/NPC/: AoiMizukawa.h  Kiyoshi.h
v2/DemoGame/Include/Player/: PlayerCharacter.h
v2/DemoGame/Include/Tests/: CollisionActor.h  TGUITest.h  TestCharacter.h  WidgetTests.h
v2/DemoGame/Include/UI/: CreditsDialogUI.h  DialogBox.h  DialogUI.h  IControllerUI.h  InteractUI.h  MainMenuUI.h  PauseMenuUI.h  PauseUI.h  SettingsController.h  SettingsMenuUI.h  SettingsUI.h  TutorialUI.h  UIController.h  UIStyle.h
v2/DemoGame/Source/: DemoGameInstance.cpp  Game.cpp  GameConfig.cpp
v2/DemoGame/Source/Character/: Aoi.cpp  Kiyoshi.cpp  MovementComponent.cpp  NPC.cpp  PlayerCharacter.cpp
v2/DemoGame/Source/GameInstance/: DemoGameInstance.cpp
v2/DemoGame/Source/Interaction/: Compass.cpp  ForestExit.cpp  InteractableComponent.cpp
v2/DemoGame/Source/Level/: LevelObject.cpp
v2/DemoGame/Source/Levels/: Credits.cpp  LevelOne.cpp  LevelOneBarriers.cpp  MainMenu.cpp
v2/DemoGame/Source/NPC/: AoiMizukawa.cpp  Kiyoshi.cpp
v2/DemoGame/Source/Player/: PlayerCharacter.cpp
v2/DemoGame/Source/Tests/: CollisionActor.cpp  TGUITest.cpp  TestCharacter.cpp  WidgetTests.cpp
v2/DemoGame/Source/UI/: CreditsDialogUI.cpp  DialogBox.cpp  DialogUI.cpp  InteractUI.cpp  MainMenuUI.cpp  PauseMenuUI.cpp  PauseUI.cpp  SettingsController.cpp  SettingsMenuUI.cpp  SettingsUI.cpp  TutorialUI.cpp  UIController.cpp  UIStyle.cpp
v2/DemoGame/Source/UIScreens/: TestScreen.h
v2/WaterEngine/: CMakeLists.txt
v2/WaterEngine/Config/: EngineConfig.ini  EngineConfig.json
v2/WaterEngine/Include/: EngineConfig.h  Entry.h
v2/WaterEngine/Include/Asset/: AssetSource.h  DirectorySource.h  FileWatcher.h  PakSource.h
v2/WaterEngine/Include/AssetDirectory/: FileDirectory.h  PakDirectory.h
v2/WaterEngine/Include/Component/: AnimationComponent.h  CameraComponent.h  CollisionComponent.h  MovementComponent.h  PhysicsComponent.h  PostProcessingComponent.h
v2/WaterEngine/Include/Core/: AudioTypes.h  CoreMinimal.h  EngineConfig.h  JsonTypes.h  MusicMemoryStream.h  RenderTypes.h
v2/WaterEngine/Include/Editor/: Editor.h
v2/WaterEngine/Include/EventHandler/: GUIEventHandler.h  InputEventHandler.h  WindowEventHandler.h
v2/WaterEngine/Include/Framework/: Application.h  Editor.h  EngineSubsystem.h  GameInstance.h  GameWindow.h  GameWindowEventHandler.h  WaterEngine.h
v2/WaterEngine/Include/Framework/EventHandling/: GameWindowEventHandler.h
v2/WaterEngine/Include/Framework/Level/: Level.h  LevelFactory.h
v2/WaterEngine/Include/Input/: ControllerTest.h  EditorEventHandler.h  InputBinding.h  InputEventHandler.h  WindowEventHandler.h
v2/WaterEngine/Include/Interface/: IAssetDirector.h  ICamera.h  IGameStateToken.h  IPostProcessEffect.h
v2/WaterEngine/Include/PostProcess/: EmbeddedShaders.h  IPostProcess.h
v2/WaterEngine/Include/Subsystem/: AsyncResourceSubsystem.h  AudioSubsystem.h  CameraSubsystem.h  ClockSubsystem.h  CollisionSubsystem.h  CursorSubsystem.h  GUISubsystem.h  GameStateSubsystem.h  InputSubsystem.h  PhysicsSubsystem.h  RenderSubsystem.h  ResourceSubsystem.h  SaveLoadSubsystem.h  SaveSubsystem.h  TimeSubsystem.h  TimerSubsystem.h  WindowSubsystem.h  WorldFactory.h  WorldSubsystem.h
v2/WaterEngine/Include/UI/: UILayerOrder.h  UIScreen.h  UIUtility.h  Widget.h  WidgetController.h
v2/WaterEngine/Include/Utility/: Assert.h  CoreMinimal.h  DebugDraw.h  Delegate.h  Log.h  Math.h  RandomGenerator.h  SplashScreen.h  Timer.h  WindowUtility.h
v2/WaterEngine/Source/: EngineConfig.cpp  Entry.cpp
v2/WaterEngine/Source/Asset/: DirectorySource.cpp  FileWatcher.cpp  PakSource.cpp
v2/WaterEngine/Source/AssetDirectory/: FileDirectory.cpp  PakDirectory.cpp
v2/WaterEngine/Source/Component/: AnimationComponent.cpp  CameraComponent.cpp  CollisionComponent.cpp  MovementComponent.cpp  PhysicsComponent.cpp  PostProcessingComponent.cpp
v2/WaterEngine/Source/Core/: EngineConfig.cpp  MusicMemoryStream.cpp
v2/WaterEngine/Source/Editor/: Editor.cpp
v2/WaterEngine/Source/EventHandler/: GUIEventHandler.cpp  InputEventHandler.cpp  WindowEventHandler.cpp
v2/WaterEngine/Source/Framework/: Application.cpp  Editor.cpp  GameInstance.cpp  GameWindow.cpp  GameWindowEventHandler.cpp  WaterEngine.cpp
v2/WaterEngine/Source/Input/: ControllerTest.cpp  EditorEventHandler.cpp  InputBinding.cpp  InputEventHandler.cpp  WindowEventHandler.cpp
v2/WaterEngine/Source/Subsystem/: AsyncResourceSubsystem.cpp  AudioSubsystem.cpp  CameraSubsystem.cpp  ClockSubsystem.cpp  CollisionSubsystem.cpp  CursorSubsystem.cpp  GUISubsystem.cpp  GameStateSubsystem.cpp  InputSubsystem.cpp  PhysicsSubsystem.cpp  RenderSubsystem.cpp  ResourceSubsystem.cpp  SaveLoadSubsystem.cpp  SaveSubsystem.cpp  TimeSubsystem.cpp  TimerSubsystem.cpp  WindowSubsystem.cpp  WorldFactory.cpp  WorldSubsystem.cpp
v2/WaterEngine/Source/UI/: Widget.cpp  WidgetController.cpp
v2/WaterEngine/Source/Utility/: DebugDraw.cpp  Math.cpp  RandomGenerator.cpp  SplashScreen.cpp  Timer.cpp
(+272 files in other folders)
